Updating back to use mount-s3 as now supporting overwriting files, and fix issue where theme changes in cudl.ui.json5 were lost